# market

./: README.md
backend/: Cargo.toml
backend/src/: db.rs  main.rs  routes.rs
frontend/: next.config.js  package.json
frontend/src/@core/theme/: ThemeComponent.tsx
frontend/src/@core/theme/palette/: index.ts
frontend/src/configs/: themeConfig.ts
frontend/src/layouts/: upgrade.tsx  veela.tsx
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx
frontend/src/pages/sales/: app.tsx  edit.tsx  index.tsx  manage.tsx  reg.tsx
