[package]
name = "market"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.28.2"
serde_json = "1.0.116"
simple_crypt = "0.2.3"
mongodb = "2.8.2"
futures = "0.3"
uuid = { version = "1.0.0-alpha.1" }
serde = { version = "1", features = ["derive"] }
bson = "2.11.0"
tower-http = { version = "0.6.1", features = ["cors"] }
